--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
   - repo: https://github.com/sqlfluff/sqlfluff
-    rev: 2.0.0a5
+    rev: 3.0.7
     hooks:
       - id: sqlfluff-lint
         name: sqlfluff-lint
         entry: sqlfluff lint --config dbt-pre-commit-conf/.sqlfluff models/
         description: "Lints sql files with `SQLFluff`"
-        additional_dependencies : ['dbt-core==1.4.5', 'dbt-extractor==0.4.1', 'dbt-bigquery==1.4.3', 'dbt-trino==1.4.2', 'sqlfluff-templater-dbt==2.0.0a5']
+        additional_dependencies : ['dbt-core==1.8.1', 'dbt-extractor==0.5.1', 'dbt-bigquery==1.8.1', 'dbt-trino==1.8.0', 'sqlfluff-templater-dbt==3.0.7']
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
